<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_date"
        android:layout_margin="40dp"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_schedule"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/button_schedule"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_tomato"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/button_tomato"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/button_account"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_statistic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/button_statistic"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_compute"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/button_compute"
        android:textSize="34sp" />


</LinearLayout>